# Box

./: .black.toml  .coveragerc  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  CLAUDE.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  box.py  build.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements-text  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: pythonpackage.yml  pythonpublish.yml  tests.yml
box/: __init__.py  box.py  box.pyi  box_list.py  box_list.pyi  config_box.py  config_box.pyi  converters.py  converters.pyi  exceptions.py  from_file.py  from_file.pyi  shorthand_box.py  shorthand_box.pyi  wrapt_box.py
conda/box/: bld.bat  meta.yaml
docs/: 4.0_changes.md  4.x_changes.rst  Makefile  make.bat
docs/source/: box.rst  conf.py
test/: common.py  performace_comparisions.py  performance_comparisons.py  test_box.py  test_box_list.py  test_config_box.py  test_converters.py  test_from_file.py  test_functional_box.py  test_notification.py  test_sbox.py  test_setdefault.py  test_unittests_box.py  test_wrapt_box.py
test/data/: bad_file.txt  csv_file.csv  json_file.json  json_list.json  msgpack_file.msgpack  msgpack_list.msgpack  toml_file.tml  yaml_file.yaml  yaml_list.yaml
test/report/: generate_report.py  run_benchmarks.py
